Wip forgot password.

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -2,7 +2,8 @@
   "common": {
     "errors": {
       "unexpected": "Something went wrong!"
-    }
+    },
+    "ok": "Ok"
   },
   "header": {
     "login": "Sign In",
@@ -15,13 +16,19 @@
     "somethingWentWrong": "Something went wrong!",
     "title": "Whoops!"
   },
+  "forgotPassword": {
+    "email": "Your Email",
+    "submitButton": "Reset password",
+    "sendEmail": "A mail has been send to %(email)s to reset your password."
+  },
   "login": {
+    "email": "Your Email",
     "errors": {
       "incorrect": "Email/password combination is incorrect."
     },
-    "title": "Log In",
-    "email": "Your Email",
+    "forgotPassword": "Forgot Password?",
     "password": "Your Password",
-    "submitButton": "Log in"
+    "submitButton": "Log in",
+    "title": "Log In"
   }
 }
