--- a/src/lang/nl.json
+++ b/src/lang/nl.json
@@ -2,7 +2,8 @@
   "common": {
     "errors": {
       "unexpected": "Er ging iets mis!"
-    }
+    },
+    "ok": "Ok"
   },
   "header": {
     "login": "Aanmelden",
@@ -15,13 +16,19 @@
     "somethingWentWrong": "Er ging iets mis!",
     "title": "Whoops!"
   },
+  "forgotPassword": {
+    "email": "Je e-mail",
+    "submitButton": "Wachtwoord opnieuw instellen",
+    "sendEmail": "A mail has been send to %(email)s to reset your password."
+  },
   "login": {
+    "email": "Je e-mail",
     "errors": {
       "incorrect": "Email/password combination is incorrect."
     },
-    "title": "Log in",
-    "email": "Je e-mail",
+    "forgotPassword": "Forgot Password?",
     "password": "Je wachtwoord",
-    "submitButton": "Aanmelden"
+    "submitButton": "Aanmelden",
+    "title": "Log in"
   }
 }
