--- a/src/lang/nl.json
+++ b/src/lang/nl.json
@@ -17,9 +17,18 @@
     "title": "Whoops!"
   },
   "forgotPassword": {
+    "errors": {
+      "failed": "Er is een fout opgetreden tijdens de poging om uw wachtwoord te wijzigen :("
+    },
     "email": "Je e-mail",
     "submitButton": "Wachtwoord opnieuw instellen",
     "sendEmail": "A mail has been send to %(email)s to reset your password."
+  },
+  "resetPassword": {
+    "password": "Your New Password",
+    "passwordRepeat": "Repeat Password",
+    "submitButton": "Change password",
+    "success": "Your password has been successfully changed!"
   },
   "login": {
     "email": "Je e-mail",
