wip activity tab

--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -31,7 +31,7 @@
     "success": "Your password has been successfully changed!"
   },
   "login": {
-    "email": "Your Email",
+    "email": "Your Email or Username",
     "errors": {
       "incorrect": "Email/password combination is incorrect."
     },
