--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -18,13 +18,17 @@
   },
   "forgotPassword": {
     "errors": {
-      "failed": "We encountered an error while trying to change your password :("
+      "alreadySendMail": "E-mail was already send. Please check your e-mail for further instructions.",
+      "invalidEmail": "Invalid e-mail."
     },
     "email": "Your Email",
     "submitButton": "Reset password",
     "sendEmail": "A mail has been send to %(email)s to reset your password."
   },
   "resetPassword": {
+    "errors": {
+      "failed": "We encountered an error while trying to change your password :("
+    },
     "password": "Your New Password",
     "passwordRepeat": "Repeat Password",
     "submitButton": "Change password",
