--- a/src/lang/nl.json
+++ b/src/lang/nl.json
@@ -1,6 +1,8 @@
 {
   "common": {
     "errors": {
+      "required": "This field is required.",
+      "invalid": "This field is invalid.",
       "unexpected": "Er ging iets mis!"
     },
     "ok": "Ok"
